# platform

./: .gitignore  Cargo.toml  Makefile.toml  README.org  Readme.org  justfile
.cargo/: config.toml
AdaptiveE/: ada.py  tf_demo.py
AdaptiveE/ada-rs/: Cargo.toml  Makefile.toml
AdaptiveE/ada-rs/examples/: config.py  env.sh  import.py  py.rs  regression_checkpoint.rs
AdaptiveE/ada-rs/src/: lib.rs  main.rs  proto.rs
AdaptiveE/explore/: fly.py  fly_var.py
AdaptiveE/py/: Makefile.toml  README.org  __init__.py  ada.bak.py  ada.py  ada_predict.py  config.py  const.py  data.py  justfile  logger.py  logreg.py  losses.py  requirement.txt  save.justfile  save_model.py  save_model_simple.py  scabale.py  train.py
AdaptiveE/py/explore/: fly_var_scope.py  renter_var_scope.py  while_loop_var.py
AdaptiveE/py/utils/: __init__.py  gpu.py  scatter.py  scope.py
AdaptiveE/utils/: __init__.py  util.py
examples/: '  README.org  jit.rs  parse.rs  split_triples.rs
frontend/: .swcrc  Cargo.toml  Makefile.toml  Trunk.toml  index.html  index.scss  package-lock.json  package.json  spack.config.js  tsconfig.json  webpack.config.js
frontend/.cargo/: config.toml
frontend/src/: .codebase.rs  .codebase.ts  app.rs  bindings.rs  bindings.rs.bak  index.html  index.ts  lib.rs  main.rs  navbar.html  types.ts  utils.js  utils.rs  utils.ts
frontend/src/pages/: ai.rs  category.rs  home.rs  mod.rs  symptom.rs
frontend/static/: e.js  e_inline.js
frontend/static/asset/: test.js
server/: Cargo.toml  Makefile.toml  dataset.txt  example.txt  graph_test.txt  graph_test_with_rev.txt  graph_trn.txt  graph_val.txt  graph_val_with_rev.txt  id_name_map.json  justfile  name_id_map.json  symptom.old.tfrecord  symptom_test.tfrecord  symptom_trn.tfrecord  symptom_val.tfrecord
server/.cargo/: config.toml
server/examples/: README.org  get_rdf_type.rs  graph.rs  inject_data.rs  insert_data.rs  kg.rs  loop.rs  loop_seq.rs  nebula.rs  nebula_v1.rs  prepare_data.rs  query_ent.rs  split_cat.rs  stat_triples.rs
server/examples/bak/: nom.rs  rio.rs  scan.rs  turtle.rs
server/examples/lab/: kg.rs  ndarray.rs  neo4j.rs  test_split.rs
server/src/: adae.rs  common.rs  d3.rs  data.rs  echarts.rs  kg.rs  kg_d3.rs  lib.rs  main.rs  neo4j.rs  resp.rs  session.rs  utils.rs
server/static/css/: materializecss-font.css
server/static/extra/materialize/css/: materializecss-font.css
server/static/html/: demo.html
serving/: Cargo.toml  justfile  log
serving/SavedModel/: saved_model.pb
serving/SavedModel/variables/: variables.index
serving/src/: lib.rs
src/: common.rs  kg.rs  lib.rs  main.rs  neo4j.rs  triple.rs  utils.rs
tests/: scan.rs  test_kg.rs
