[package]
name = "platform"
version = "0.1.0"
authors = ["llouice <g13920228592@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.3.0"
anyhow = "1.0.36"
serde = { version="1.0.118", features=["derive"] }
serde_json = "1.0.60"
env_logger = "0.8.2"
log = "0.4.11"
