[package]
name = "platform"
version = "0.1.0"
authors = ["llouice <g13920228592@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.3"
anyhow = "1.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
env_logger = "0.8"
log = "0.4"
paste = "1.0"
seq-macro = "0.2"
structopt = "0.3"
neo4rs = "0.5"
tokio = "1.4"
futures = "0.3"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
