[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ybc = "0.2"
# yew = { version = "0.18", git="https://github.com/yewstack/yew.git" }
yew = "0.18"


# env_logger = "0.9"
log = "0.4"
wasm-bindgen = "0.2.76"
js-sys = "0.3.53"
wasm-bindgen-futures = "0.4.26"
wasm-logger = "0.2.0"
anyhow = "1.0.43"

platform = { path = "../../platform/server" }


[dependencies.web-sys]
version = "0.3"

features = [
  "InputEvent",
  "HtmlInputElement",
  "KeyboardEvent"
]
