[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "yew-frontend"
path = "src/main.rs"

[dependencies]
yew = { version = "0.18", git="https://github.com/yewstack/yew.git" }
# yew = "0.18"


# env_logger = "0.9"
log = "0.4"
wasm-bindgen = "0.2.76"
js-sys = "0.3.53"
wasm-bindgen-futures = "0.4.26"
wasm-logger = "0.2.0"
anyhow = "1.0.43"

# platform = { path = "../../platform/server", features=["web"] , default_features = false}
platform = { path = "../../platform/server" }
gloo = "0.3.0"
reqwasm = "0.2.1"


[dependencies.web-sys]
version = "0.3"

features = [
  "InputEvent",
  "HtmlInputElement",
  "KeyboardEvent"
]
