[package]
name = "platform"
version = "0.1.0"
authors = ["llouice <g13920228592@gmail.com>"]
edition = "2018"
default-run = "platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tch = "0.5"
env_logger = "0.9"
log = "0.4"
paste = "1.0"
seq-macro = "0.2"
structopt = "0.3"
neo4rs = "0.5"
tokio = "1"
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4.19"
actix-web = "4.0.0-beta"
actix-files = "0.6.0-beta"
actix-rt = "1.1.1"
actix-cors = "0.6.0-beta"
actix-session = "0.5.0-beta.2"
# actix-sled-session = "0.2.0"
actix-redis = "0.10.0-beta.2"
clap = { version = "3.0.0-beta", features = ["derive"] }
ndarray = "0.14"
ndarray-stats = "0.4.0"
futures-util = "0.3.17"
rand = "0.8.4"


[dependencies]
cfg-if = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
urlencoding = "2.1.0"
strum = { version = "0.21", features = ["derive"] }
serving = { path = "../serving" }

[dev-dependencies]
# delegate = "0.6.1"
graph = "0.1.5"
indexmap = "1.7.0"
rayon = "1.5.1"
tfrecord = { git = "https://github.com/jerry73204/rust-tfrecord.git" }
statrs = "0.15"
num_enum = "0.5"


# [dev.dependencies]
# hdf5 = { git = "https://github.com/llouice/hdf5-rust.git", branch = "attrs" }
# hdf5 = "0.7.1"
